@@ -1,5 +1,7 @@
 === HEAD
 
+* Allow schema_dumper to handle :qualify=>true option on PostgreSQL (jeremyevans)
+
 * Allow foreign_key schema method to handle SQL::Identifier and SQL::QualifiedIdentifier as 2nd argument (jeremyevans)
 
 === 4.32.0 (2016-03-01)
